feat: list projects a user has access to
